fix for overflowing month display
git-svn-id: https://plugins.svn.wordpress.org/in-over-your-archives/trunk@282038 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/in_over_your_css.css
+++ b/css/in_over_your_css.css
@@ -3,10 +3,17 @@
 	div#inoveryourarchives { position:relative; z-index:1; min-height:565px; }
 
 	div#inoveryourarchives ul { display:block; clear:both; height:24px; padding:0; margin:0 0 10px 0; z-index:2; position:relative; list-style-type:none; list-style-image:none; }
-	div#inoveryourarchives ul li { float:left; height:28px; margin:0 2px 0 1px; padding:0; font-family:arial,helvetica,sans-serif; font-size:11px; font-style:normal; text-align:center; text-transform:uppercase; width:30px; }
+	div#inoveryourarchives ul li { 
+		float:left;
+		width:30px; height:28px;
+		margin:0 2px 0 1px; padding:0;
+		font-family:arial,helvetica,sans-serif; font-size:11px; font-style:normal; font-weight:normal;
+		text-align:center; text-transform:uppercase; text-shadow:none;
+		vertical-align:baseline;
+	}
 	div#inoveryourarchives ul li:before { content:""; } /** Fix for Kubrick **/
-	div#inoveryourarchives ul li span { padding:12px 3px 4px; height:12px; display:block;}
-	div#inoveryourarchives ul li a { border:none; text-decoration:none; display:block; padding:12px 3px 4px; height:12px; }
+	div#inoveryourarchives ul li span { padding:12px 0 4px; height:12px; display:block; }
+	div#inoveryourarchives ul li a { border:none; text-decoration:none; display:block; padding:12px 0 4px; height:12px; font-weight:normal; font-size:11px; }
 	div#inoveryourarchives ul li a:hover { background:#bebebe; }
 
 	div#inoveryourarchives ul li.selected, 
@@ -29,6 +36,7 @@
 	div#inoveryourarchives .slider { }
 	
 	div#inoveryourarchives #inoveryourmonths { position: relative; }
+	div#inoveryourarchives #inoveryourmonths .post img { display:none; } /* for cases where images aren't getting pulled and are left in the archive post detail */	
 	div#inoveryourarchives #inoveryouryears { position: relative; display: block; height: 35px; }
 	div#inoveryourarchives #inoveryouryears .inoveryouryear { position: absolute; top: 0; left: 0; }
 	
